# mywallet-api

./: Dockerfile  Makefile  README.md  README.rst  heroku.yml  pyproject.toml
mywallet-api/: manage.py
mywallet-api/apps/wallets/: models.py  serializers.py  urls.py  utils.py  views.py
mywallet-api/apps/wallets/migrations/: 0001_initial.py
mywallet-api/mywallet_api/: asgi.py  settings.py  urls.py  wsgi.py
mywallet-api/tests/: test_mywallet_api.py
