[tool.poetry]
name = "mywallet-api"
version = "0.1.0"
description = ""
authors = ["MatheusBLopes <mathesublopes10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"
gevent = "^21.12.0"
dj-database-url = "^1.0.0"
prettyconf = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"
safety = "^2.1.1"
pytest-cov = "^3.0.0"
pytest-deadfixtures = "^2.2.1"
pytest-django = "^4.5.2"
pytest-envvars = "^1.2.1"
pytest-randomly = "^3.12.0"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
